# stathis

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-pi.yml
src/: main.rs
src/commands/: mod.rs  ping.rs  remind.rs
